fixed layout issue where top of page wasn't adding an area

--- a/COYI/public/Stylesheets/master.css
+++ b/COYI/public/Stylesheets/master.css
@@ -20,6 +20,10 @@
   color: #F0564E;
 }
 
+.top_of_page {
+  height: 76px;
+}
+
 .home-link:hover {
   color: #F0564E;
   text-decoration: none;
